// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`long-method-chain-test1.js - {"bogus1":true} format 1`] = `
====================================options=====================================
bogus1: true
parsers: ["babel", "babel-flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
obj.first(a).second(b).third(c)

=====================================output=====================================
obj.first(a).second(b).third(c);

================================================================================
`;

exports[`long-method-chain-test1.js - {"breakLongMethodChains":true} format 1`] = `
====================================options=====================================
breakLongMethodChains: true
parsers: ["babel", "babel-flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
obj.first(a).second(b).third(c)

=====================================output=====================================
obj
  .first(a)
  .second(b)
  .third(c);

================================================================================
`;
